--- a/app/css/main.css
+++ b/app/css/main.css
@@ -54,7 +54,9 @@ body {
     padding-bottom: 5px;
     text-align: center;
     opacity: .7;
+    font-size: 10px;
 }
+.c-credits a,
 .c-credits a:visited {
     color: #FFF;
 }
